--- a/Trabalho_Cadastro/Trabalho_Cadastro.csproj
+++ b/Trabalho_Cadastro/Trabalho_Cadastro.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control\Cadastrar_Usuario.cs" />
     <Compile Include="Control\Timer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
