--- a/Trabalho_Cadastro/Trabalho_Cadastro.csproj
+++ b/Trabalho_Cadastro/Trabalho_Cadastro.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Control\Cadastrar_Usuario.cs" />
+    <Compile Include="Control\VerificadorUsuarioeSenha.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Cadastro.cs">
